<resources>
    <string name="app_name">leo-cosmetic-2710</string>
    <string name="passNum">◉</string>
    <string name="delete">Xóa</string>
    <string name="exit">Thoát</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Tổng quan</string>
    <string name="product">Sản phẩm</string>
    <string name="order">Đơn hàng</string>
    <string name="customer">Khách hàng</string>
    <string name="product_statistics">Thống kê sản phẩm</string>
    <string name="enter_product_name">Nhập tên sản phẩm</string>
    <string name="product_list">Danh sách sản phẩm</string>
    <string name="count_exits_products">Số sản phẩm hiện tồn</string>
    <string name="count_imported_products">Số sản phẩm nhập kho</string>
    <string name="count_selling_product">Số sản phẩm bán ra</string>
    <string name="best_imported_product">Sản phẩm nhập nhiều nhất</string>
    <string name="best_selling_product">Sản phẩm bán chạy nhất</string>
    <string name="order_list">Danh sách đơn hàng</string>
    <string name="total_orders">Tổng số đơn hàng</string>
    <string name="count_order_success">Số đơn hàng thành công</string>
    <string name="count_order_waiting">Số đơn hàng đang đợi</string>
    <string name="count_order_cancel">Số đơn hàng đã hủy</string>
    <string name="count_orders_define">Số đơn hàng hoàn trả</string>
    <string name="typing_id_order">Nhập mã đơn hàng</string>
    <string name="info_order">Thông tin đơn hàng</string>
    <string name="create_orders">Tạo đơn hàng</string>
    <string name="add_products">Thêm sản phẩm</string>
    <string name="info_customers">Thông tin khách hàng</string>
    <string name="new_customer">Khách hàng mới</string>
    <string name="quantity">Số lượng</string>
    <string name="description">Mô tả</string>
    <string name="retail_price">Giá bán lẻ</string>
    <string name="type">Loại</string>
    <string name="create_customer">Tạo khách hàng</string>
    <string name="create_product">Tạo sản phẩm</string>
    <string name="select_customer">Chọn khách hàng</string>
    <string name="back">Quay lại</string>
</resources>
